--- a/css/addons/unraid/login-page/retro-terminal/white.css
+++ b/css/addons/unraid/login-page/retro-terminal/white.css
@@ -11,7 +11,7 @@
 --body-after: #70d7f633;
 --body-animation: flicker;
 /* --logo: url(https://i.imgur.com/FnA6t5f.png) center no-repeat; */
---logo: url(/css/addons/unraid/login-page/fallout/logo/vault-tec_green.png) center no-repeat;
+--logo: url(https://i.imgur.com/Oo6gXqY.png) center no-repeat;
 --text-color: #ffffff;
 --input-color: #ffffff;
 --link-color: #ffffff;
