--- a/css/addons/unraid/login-page/retro-terminal/white.css
+++ b/css/addons/unraid/login-page/retro-terminal/white.css
@@ -16,7 +16,7 @@
 --text-color: #ffffff;
 --input-color: #ffffff;
 --link-color: #ffffff;
---link-color-hover: #af0606;
+--link-color-hover: #E56B8C;
 --case-color: #ffffff;
 --button-text-color: #ffffff;
 --button-text-color-hover: #ffffff;
